MCP Basic File Search

--- a/mcp-learning-project/servers_config.json
+++ b/mcp-learning-project/servers_config.json
@@ -1,10 +1,23 @@
-
-
 {
-    "mcpServers": {
-      "filesystem": {
-        "command": "npx",
-        "args": ["-y", "@modelcontextprotocol/server-filesystem", "/Users/vivek"]
+  "mcpServers": {
+    "filesystem": {
+      "command": "npx",
+      "args": [
+        "-y",
+        "@modelcontextprotocol/server-filesystem",
+        "/Users/vivek/Downloads"
+      ],
+      "env": {}
+    },
+    "brave-search": {
+      "command": "npx",
+      "args": [
+        "-y",
+        "@modelcontextprotocol/server-brave-search"
+      ],
+      "env": {
+        "BRAVE_API_KEY": "BRAVE_API_KEY"
       }
     }
   }
+}
